trying to solve video problem on mobile 3

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -274,7 +274,7 @@ header {
 		font-size: 2rem;
 		justify-content: center;
 		width: 100%;
-        z-index: 5;
+        // z-index: 5;
 
 		p {
 			padding: 1.5rem;
